tests/ui/generic-associated-types/equality-bound.stderr
error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:3:51
   |
LL | fn sum<I: Iterator<Item = ()>>(i: I) -> i32 where I::Item = i32 {
   |                                                   ^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `Iterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL - fn sum<I: Iterator<Item = ()>>(i: I) -> i32 where I::Item = i32 {
LL + fn sum<I: Iterator<Item = (), Item = i32>>(i: I) -> i32  {
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:7:41
   |
LL | fn sum2<I: Iterator>(i: I) -> i32 where I::Item = i32 {
   |                                         ^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `Iterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL - fn sum2<I: Iterator>(i: I) -> i32 where I::Item = i32 {
LL + fn sum2<I: Iterator<Item = i32>>(i: I) -> i32  {
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:11:41
   |
LL | fn sum3<J: Iterator>(i: J) -> i32 where I::Item = i32 {
   |                                         ^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:22:58
   |
LL |     fn from_iter<T>(_: T) -> Self where T: IntoIterator, IntoIterator::Item = A,
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T>(_: T) -> Self where T: IntoIterator, IntoIterator::Item = A,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator<Item = A>,
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:33:58
   |
LL |     fn from_iter<T>(_: T) -> Self where T: IntoIterator, T::Item = A,
   |                                                          ^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T>(_: T) -> Self where T: IntoIterator, T::Item = A,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator<Item = A>,
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:44:55
   |
LL |     fn from_iter<T: IntoIterator>(_: T) -> Self where IntoIterator::Item = A,
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T: IntoIterator>(_: T) -> Self where IntoIterator::Item = A,
LL +     fn from_iter<T: IntoIterator<Item = A>>(_: T) -> Self 
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:55:55
   |
LL |     fn from_iter<T: IntoIterator>(_: T) -> Self where T::Item = A,
   |                                                       ^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T: IntoIterator>(_: T) -> Self where T::Item = A,
LL +     fn from_iter<T: IntoIterator<Item = A>>(_: T) -> Self 
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:66:41
   |
LL |     fn from_iter<T>(_: T) -> Self where IntoIterator::Item = A, T: IntoIterator,
   |                                         ^^^^^^^^^^^^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T>(_: T) -> Self where IntoIterator::Item = A, T: IntoIterator,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator<Item = A>,
   |

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/equality-bound.rs:77:41
   |
LL |     fn from_iter<T>(_: T) -> Self where T::Item = A, T: IntoIterator,
   |                                         ^^^^^^^^^^^ not supported
   |
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information
help: if `IntoIterator::Item` is an associated type you're trying to set, use the associated type binding syntax
   |
LL -     fn from_iter<T>(_: T) -> Self where T::Item = A, T: IntoIterator,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator<Item = A>,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:22:79
   |
LL |     fn from_iter<T>(_: T) -> Self where T: IntoIterator, IntoIterator::Item = A,
   |                                                                               ^
...
LL | struct K {}
   | -------- similarly named struct `K` defined here
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T>(_: T) -> Self where T: IntoIterator, IntoIterator::Item = A,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator, IntoIterator::Item = K,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:33:68
   |
LL |     fn from_iter<T>(_: T) -> Self where T: IntoIterator, T::Item = A,
   |                                                                    ^
...
LL | struct K {}
   | -------- similarly named struct `K` defined here
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T>(_: T) -> Self where T: IntoIterator, T::Item = A,
LL +     fn from_iter<T>(_: T) -> Self where T: IntoIterator, T::Item = K,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:44:76
   |
LL |     fn from_iter<T: IntoIterator>(_: T) -> Self where IntoIterator::Item = A,
   |                                                                            ^
...
LL | struct K {}
   | -------- similarly named struct `K` defined here
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T: IntoIterator>(_: T) -> Self where IntoIterator::Item = A,
LL +     fn from_iter<T: IntoIterator>(_: T) -> Self where IntoIterator::Item = K,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:55:65
   |
LL | struct K {}
   | -------- similarly named struct `K` defined here
...
LL |     fn from_iter<T: IntoIterator>(_: T) -> Self where T::Item = A,
   |                                                                 ^
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T: IntoIterator>(_: T) -> Self where T::Item = A,
LL +     fn from_iter<T: IntoIterator>(_: T) -> Self where T::Item = K,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:66:62
   |
LL | struct K {}
   | -------- similarly named struct `K` defined here
...
LL |     fn from_iter<T>(_: T) -> Self where IntoIterator::Item = A, T: IntoIterator,
   |                                                              ^
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T>(_: T) -> Self where IntoIterator::Item = A, T: IntoIterator,
LL +     fn from_iter<T>(_: T) -> Self where IntoIterator::Item = K, T: IntoIterator,
   |

error[E0425]: cannot find type `A` in this scope
  --> $DIR/equality-bound.rs:77:51
   |
LL | struct K {}
   | -------- similarly named struct `K` defined here
...
LL |     fn from_iter<T>(_: T) -> Self where T::Item = A, T: IntoIterator,
   |                                                   ^
   |
help: a struct with a similar name exists
   |
LL -     fn from_iter<T>(_: T) -> Self where T::Item = A, T: IntoIterator,
LL +     fn from_iter<T>(_: T) -> Self where T::Item = K, T: IntoIterator,
   |

error[E0433]: cannot find type `I` in this scope
  --> $DIR/equality-bound.rs:11:41
   |
LL | fn sum3<J: Iterator>(i: J) -> i32 where I::Item = i32 {
   |                                         ^ use of undeclared type `I`
   |
help: a type parameter with a similar name exists
   |
LL - fn sum3<J: Iterator>(i: J) -> i32 where I::Item = i32 {
LL + fn sum3<J: Iterator>(i: J) -> i32 where J::Item = i32 {
   |

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
